# shortener-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: settings.py  urls.py
links/: go.py  models.py  serializers.py  urls.py  views.py
links/migrations/: 0001_initial.py
